--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -5,25 +5,19 @@
 
 @using (Html.BeginForm("LoginSubmit", "Login", FormMethod.Post))
 {
-    <div class="box">
+    <div class="box" style="max-width: min-content; margin: auto;">
         <div class="divisao">
             <div class="header">Login de Usuário</div>
-            <div class="row">
-                <div class="field">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="Username"> 
-                </div>
+            <div class="field">
+                <label for="username">Username</label>
+                <input maxlength="50" type="text" id="username" name="Username"> 
             </div>
-            <div class="row">
-                <div class="field">
-                    <label for="senha">Senha</label>
-                    <input type="password" id="senha" name="Senha">
-                </div>
+            <div class="field">
+                <label for="senha">Senha</label>
+                <input maxlength="50" type="password" id="senha" name="Senha">
             </div>
-            <div class="row">
-                <button type="submit">Login</button>
-            </div>
+            <button type="submit" style="margin-top: 16px;">Login</button>
         </div>
+        <a href="@Url.Action("Index", "Usuario")">Cadastrar</a>
     </div>
 }
-<a href="@Url.Action("Index", "Usuario")">Cadastrar</button>
